Chart library installed

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,11 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.Chart-container{
+  width: 80%;
+  height: 600px;
 
+}
 .App-link {
   color: #61dafb;
 }
