--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,96 @@
-.App {
+
+
+.app {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+  width: 100vw;
+  height: 100vh;
   background-color: #282c34;
-  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.app-header {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-.Chart-container{
-  width: 80%;
-  height: 60%;
+  width: 100%;
+  height: 30%;
+  background-color: red;
 
+  
 }
-.App-link {
-  color: #61dafb;
+.title{
+  width: 100%;
+  background-color: white;
+  color: black;
+  height: 50%;
+  
+}
+.subtitle{
+  height: 50%;
+  background-color: blue;
+  width: 100%;
+}
+.app-content{
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  height: 65%;
+}
+.options {
+  background-color: rgb(240, 154, 154);
+  flex-direction: column;
+  align-items: flex-start;
+  display: flex;
+  height: 100%;
+  width: 28%;
+  border-color: yellow;
+  border-radius: 2%;
+}
+.form-row{
+ width: 100%;
+}
+.options div label{
+  flex-direction: column;
+  display: flex;
+  align-items: flex-start;
+  margin-left: 4%;
+}
+.options span{
+  font-size: 25px;
+  
+  color: yellow;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.options input{
+  width: 90%;
+  height: 20px;
 }
+.select {
+  width: 90%;
+}
+.panel{
+  display: flex;
+  width: 70%;
+  background-color: purple;
+  align-items: center;
+  height: 100%;
+  flex-direction: column;
+}
+.chart-container{
+  
+ height: 100%;
+  margin-bottom: 5%;
+  background-color: red;
+
+ 
+}
+
+
