--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,7 @@
 .app {
   text-align: center;
   width: 100vw;
-  height: 100vh;
-  background-color: #282c34;
+  height: 100vh;background-color: rgb(0, 30, 0);
   align-items: center;
   justify-content: center;
 }
@@ -18,20 +17,19 @@
   color: white;
   width: 100%;
   height: 30%;
-  background-color: red;
 
   
 }
 .title{
   width: 100%;
-  background-color: white;
-  color: black;
+  background-color:rgb(72, 109, 72);
+  color: yellow;
   height: 50%;
   
 }
 .subtitle{
   height: 50%;
-  background-color: blue;
+  background-color: rgb(0, 30, 0);
   width: 100%;
 }
 .app-content{
@@ -44,15 +42,16 @@
   color: white;
   height: 65%;
 }
-.options {
-  background-color: rgb(240, 154, 154);
+.options { background-color: rgb(0, 35, 0);
   flex-direction: column;
   align-items: flex-start;
   display: flex;
   height: 100%;
   width: 28%;
-  border-color: yellow;
+  border-color: rgb(60, 60, 0);
   border-radius: 2%;
+  border-width: 1px;
+  border-style:groove;
 }
 .form-row{
  width: 100%;
@@ -61,34 +60,40 @@
   flex-direction: column;
   display: flex;
   align-items: flex-start;
-  margin-left: 4%;
+  margin-left: 2%;
+  margin: 2%;
 }
 .options span{
-  font-size: 25px;
+  font-size: 20px;
   
   color: yellow;
 }
 
 .options input{
   width: 90%;
-  height: 20px;
+  height: 35px;
+  margin-top: 2%;
 }
 .select {
   width: 90%;
+  margin-top: 2%;
 }
 .panel{
   display: flex;
   width: 70%;
-  background-color: purple;
+  background-color: rgb(0, 35, 0);
   align-items: center;
   height: 100%;
   flex-direction: column;
+  border-color: rgb(60, 60, 0);
+  border-radius: 2%;
+  border-width: 1px;
+  border-style:groove;
 }
 .chart-container{
   
- height: 100%;
+ width: 90%;
   margin-bottom: 5%;
-  background-color: red;
 
  
 }
