--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 .app {
   text-align: center;
   width: 100vw;
-  height: 100vh;background-color: rgb(0, 30, 0);
+  height: 100vh;
+  background-color: rgb(0, 30, 0);
   align-items: center;
   justify-content: center;
 }
@@ -16,9 +17,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
   width: 100%;
-  height: 30%;
-
-  
+  height: 30%;  
 }
 .title{
   width: 100%;
@@ -34,13 +33,14 @@
 }
 .app-content{
   display: flex;
-  width: 100%;
+  width: 98%;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
   height: 65%;
+  
 }
 .options { background-color: rgb(0, 35, 0);
   flex-direction: column;
