--- a/src/App.css
+++ b/src/App.css
@@ -2,54 +2,108 @@
 
 .app {
   text-align: center;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgb(0, 30, 0);
+height: 800px;
+
+display: flex;
+flex-direction: column;
+  background-color: rgb(0, 40, 0);
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .app-header {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  
   font-size: calc(10px + 2vmin);
   color: white;
   width: 100%;
-  height: 30%;  
+  height: 15%;  
+
 }
 .title{
   width: 100%;
   background-color:rgb(72, 109, 72);
   color: yellow;
-  height: 50%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  font-size: 23px;
   
 }
-.subtitle{
-  height: 50%;
-  background-color: rgb(0, 30, 0);
+
+.navbar{
   width: 100%;
+  background-color: rgb(0, 20, 0);
+  height: 40px;
+  align-items: center;
+  display: flex;
+  justify-content: flex-end;
+  
+}
+.navbar ul{
+  flex-direction: row;
+  display: flex;
+  list-style-type: none;
+ width: 80%;
+  height: 100%;
+  align-items: center;
+  justify-content: flex-end;
+  
+
+}
+.navbar li{
+  
+  align-items: center;
+ margin-top: 1%;
+  font-size: 18px;
+  font-weight: 500;
+  height: 90%;
+  margin-left: 2%;
+}
+.navbar a{
+  color: rgb(0, 210, 0);
+  text-decoration: none;
+}
+.subtitle{
+  height: 10%;
+  background-color: rgb(0, 40, 0);
+  width: 100%;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  font-size: 18px;
+  
+}
+
+.main{
+  width: 100%;
+  display: flex;
+  height: 60%;
 }
 .app-content{
   display: flex;
-  width: 98%;
+  width: 80%;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  height: 65%;
+  height: 100%;
+  margin-left: 10%;
+  margin-right: 10%;
   
 }
-.options { background-color: rgb(0, 35, 0);
+
+
+.options { background-color: rgb(0, 30, 0);
   flex-direction: column;
   align-items: flex-start;
   display: flex;
   height: 100%;
   width: 28%;
-  border-color: rgb(60, 60, 0);
-  border-radius: 2%;
+  border-color: rgb(60, 80, 0);
   border-width: 1px;
   border-style:groove;
 }
@@ -71,8 +125,9 @@
 
 .options input{
   width: 90%;
-  height: 35px;
+  height: 30px;
   margin-top: 2%;
+  font-size: 16px;
 }
 .select {
   width: 90%;
@@ -80,22 +135,38 @@
 }
 .panel{
   display: flex;
+  position: relative;
   width: 70%;
-  background-color: rgb(0, 35, 0);
+  background-color: rgb(0, 30, 0);
   align-items: center;
   height: 100%;
-  flex-direction: column;
+  justify-content: center;
   border-color: rgb(60, 60, 0);
-  border-radius: 2%;
   border-width: 1px;
   border-style:groove;
 }
 .chart-container{
-  
- width: 90%;
-  margin-bottom: 5%;
-
+  width: 80%;
+  margin-top: 10%;
+height: 100%;
+align-items: center;
+justify-content: center;
  
 }
 
+@media screen and (max-width: 1100px) {
+  .app-content {
+    width: 98%;
+    margin-left: 1%;
+    margin-right: 1%;
+  
+  }
+}
 
+@media screen and (max-width: 1100px) {
+.navbar ul{
+  width: 80%;
+
+  margin-right: 1%;
+}
+}
