--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
 html,
 body {
-  min-height: 100vh !important;
-  height: 100vh;
   margin: 0;
-  width: 100vw;
-  background-color: #282c34;
+  
+  background-color: rgb(0, 40, 0);
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
