--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ flex-direction: column;
   height: 100%;
   align-items: center;
   justify-content: flex-end;
+  margin-right: 15%;
   
 
 }
@@ -65,8 +66,28 @@ flex-direction: column;
   color: rgb(0, 210, 0);
   text-decoration: none;
 }
+
+.main{
+  width: 100%;
+  display: flex;
+  height: 60%;
+  justify-content: center;
+}
+.app-content{
+  display: flex;
+  width: 70%;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  height: 100%;
+  margin-top: 3%;
+  align-items: center;
+  
+}
 .subtitle{
-  height: 10%;
+  height: 5%;
   background-color: rgb(0, 40, 0);
   width: 100%;
   color: white;
@@ -74,30 +95,12 @@ flex-direction: column;
   align-items: center;
   display: flex;
   font-size: 18px;
-  
-}
-
-.main{
-  width: 100%;
-  display: flex;
-  height: 60%;
-}
-.app-content{
-  display: flex;
-  width: 80%;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  height: 100%;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-bottom: 3%;
   
 }
 
 
-.options { background-color: rgb(0, 30, 0);
+.form { background-color: rgb(0, 30, 0);
   flex-direction: column;
   align-items: flex-start;
   display: flex;
@@ -110,20 +113,20 @@ flex-direction: column;
 .form-row{
  width: 100%;
 }
-.options div label{
+.form div label{
   flex-direction: column;
   display: flex;
   align-items: flex-start;
   margin-left: 2%;
   margin: 2%;
 }
-.options span{
+.form span{
   font-size: 20px;
   
   color: yellow;
 }
 
-.options input{
+.form input{
   width: 90%;
   height: 30px;
   margin-top: 2%;
@@ -136,19 +139,20 @@ flex-direction: column;
 .panel{
   display: flex;
   position: relative;
-  width: 70%;
+  width: 100%;
   background-color: rgb(0, 30, 0);
   align-items: center;
   height: 100%;
-  justify-content: center;
+  justify-content: flex-start;
   border-color: rgb(60, 60, 0);
   border-width: 1px;
   border-style:groove;
+  
 }
 .chart-container{
-  width: 89%;
-  margin-top: 10%;
-height: 100%;
+  width: 70%;
+  margin-bottom: 10%;
+height: 70%;
 align-items: center;
 justify-content: center;
  
@@ -159,6 +163,7 @@ justify-content: center;
     width: 98%;
     margin-left: 1%;
     margin-right: 1%;
+    flex-direction: column;
   
   }
 }
