--- a/src/App.css
+++ b/src/App.css
@@ -132,6 +132,12 @@ flex-direction: column;
   margin-top: 2%;
   font-size: 16px;
 }
+.form-button{
+  width: 92%;
+  height: 32px;
+  margin-top: 2%;
+  font-size: 16px;
+}
 .select {
   width: 90%;
   margin-top: 2%;
