--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
-
-
 .app {
   text-align: center;
-height: 800px;
+  height: 800px;
 
-display: flex;
-flex-direction: column;
+  display: flex;
+  flex-direction: column;
   background-color: rgb(0, 40, 0);
   align-items: center;
   justify-content: flex-start;
@@ -14,66 +12,60 @@ flex-direction: column;
 .app-header {
   display: flex;
   flex-direction: column;
-  
+
   font-size: calc(10px + 2vmin);
   color: white;
   width: 100%;
-  height: 15%;  
-
+  height: 15%;
 }
-.title{
+.title {
   width: 100%;
-  background-color:rgb(72, 109, 72);
+  background-color: rgb(72, 109, 72);
   color: yellow;
   height: 100%;
   align-items: center;
   justify-content: center;
   font-size: 23px;
-  
 }
 
-.navbar{
+.navbar {
   width: 100%;
   background-color: rgb(0, 20, 0);
   height: 40px;
   align-items: center;
   display: flex;
   justify-content: flex-end;
-  
 }
-.navbar ul{
+.navbar ul {
   flex-direction: row;
   display: flex;
   list-style-type: none;
- width: 80%;
+  width: 80%;
   height: 100%;
   align-items: center;
   justify-content: flex-end;
   margin-right: 15%;
-  
-
 }
-.navbar li{
-  
+.navbar li {
   align-items: center;
- margin-top: 1%;
+  margin-top: 1%;
   font-size: 18px;
   font-weight: 500;
   height: 90%;
   margin-left: 2%;
 }
-.navbar a{
+.navbar a {
   color: rgb(0, 210, 0);
   text-decoration: none;
 }
 
-.main{
+.main {
   width: 100%;
   display: flex;
   height: 60%;
   justify-content: center;
 }
-.app-content{
+.app-content {
   display: flex;
   width: 70%;
   flex-direction: column;
@@ -84,9 +76,8 @@ flex-direction: column;
   height: 100%;
   margin-top: 3%;
   align-items: center;
-  
 }
-.subtitle{
+.subtitle {
   height: 5%;
   background-color: rgb(0, 40, 0);
   width: 100%;
@@ -96,11 +87,10 @@ flex-direction: column;
   display: flex;
   font-size: 18px;
   margin-bottom: 3%;
-  
 }
 
-
-.form { background-color: rgb(0, 30, 0);
+.form {
+  background-color: rgb(0, 30, 0);
   flex-direction: column;
   align-items: flex-start;
   display: flex;
@@ -108,41 +98,36 @@ flex-direction: column;
   width: 28%;
   border-color: rgb(60, 80, 0);
   border-width: 1px;
-  border-style:groove;
+  border-style: groove;
 }
-.form-row{
- width: 100%;
+.form-row {
+  width: 100%;
 }
-.form div label{
+.form div label {
   flex-direction: column;
   display: flex;
   align-items: flex-start;
   margin-left: 2%;
   margin: 2%;
 }
-.form span{
+.form span {
   font-size: 20px;
-  
+
   color: yellow;
 }
 
-.form input{
+.form input {
   width: 90%;
   height: 30px;
   margin-top: 2%;
   font-size: 16px;
 }
-.form-button{
-  width: 92%;
-  height: 32px;
-  margin-top: 2%;
-  font-size: 16px;
-}
+
 .select {
   width: 90%;
   margin-top: 2%;
 }
-.panel{
+.panel {
   display: flex;
   position: relative;
   width: 100%;
@@ -152,32 +137,106 @@ flex-direction: column;
   justify-content: flex-start;
   border-color: rgb(60, 60, 0);
   border-width: 1px;
-  border-style:groove;
-  
+  border-style: groove;
 }
-.chart-container{
+.chart-container {
   width: 70%;
-  margin-bottom: 10%;
-height: 70%;
-align-items: center;
-justify-content: center;
- 
+  height: 90%;
+  align-items: center;
+  justify-content: center;
 }
 
 @media screen and (max-width: 1100px) {
   .app-content {
-    width: 98%;
+    width: 95%;
     margin-left: 1%;
     margin-right: 1%;
     flex-direction: column;
-  
+  }
+  .navbar ul {
+    width: 80%;
+
+    margin-right: 3%;
   }
 }
 
-@media screen and (max-width: 1100px) {
-.navbar ul{
-  width: 80%;
+@media screen and (max-width: 700px) {
+  .fa-solid.fa-bars {
+    display: flex;
+    color: azure;
+    font-size: xx-large;
+    justify-content: flex-end;
+    flex-direction: row;
+    width: 100%;
+    margin-right: 5%;
+  }
+  .fa-solid.fa-xmark {
+    display: flex;
+    color: azure;
+    font-size: xx-large;
+    justify-content: flex-end;
+    flex-direction: row;
+    width: 100%;
+    margin-right: 5%;
+    margin-top: -1%;
+  }
 
-  margin-right: 1%;
-}
+  .app-header {
+    height: 8%;
+  }
+  .title {
+    color: yellow;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    font-size: 13px;
+  }
+
+  .navbar {
+    height: 150px;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1%;
+    flex-direction: column;
+  }
+  .navbar ul {
+    flex-direction: column;
+    justify-content: center;
+    width: 80%;
+    height: 90%;
+    margin: 0;
+    margin-right: 8%;
+    margin-top: -5%;
+  }
+  .navbar li {
+    align-items: center;
+  }
+
+  .panel {
+    flex-direction: column-reverse;
+  }
+
+  .form {
+    align-items: center;
+    justify-content: center;
+
+    flex-direction: row;
+    height: 40%;
+    width: 100%;
+    display: inline-grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: minmax(10px, 45%);
+  }
+
+  .form span {
+    margin: 3%;
+    font-size: smaller;
+  }
+
+  .chart-container {
+    width: 90%;
+    height: 70%;
+    margin-bottom: 0%;
+    align-items: center;
+  }
 }
