--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .app {
   text-align: center;
   height: 800px;
-
   display: flex;
   flex-direction: column;
   background-color: rgb(0, 40, 0);
@@ -12,20 +11,25 @@
 .app-header {
   display: flex;
   flex-direction: column;
-
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: yellow;
   width: 100%;
   height: 15%;
 }
 .title {
   width: 100%;
   background-color: rgb(72, 109, 72);
-  color: yellow;
+ 
   height: 100%;
   align-items: center;
   justify-content: center;
   font-size: 23px;
+}
+.title h1{
+  background: -webkit-linear-gradient(yellow, rgb(145, 255, 0));
+ 
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .navbar {
@@ -62,20 +66,20 @@
 .main {
   width: 100%;
   display: flex;
-  height: 60%;
+  height: 100%;
   justify-content: center;
+  align-items: center;
 }
 .app-content {
   display: flex;
   width: 70%;
+  height: 100%;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
-  height: 100%;
-  margin-top: 3%;
-  align-items: center;
+  margin-top: 4%;
 }
 .subtitle {
   height: 5%;
@@ -89,23 +93,40 @@
   margin-bottom: 3%;
 }
 
-.form {
-  background-color: rgb(0, 30, 0);
-  flex-direction: column;
-  align-items: flex-start;
+.panel {
   display: flex;
-  height: 100%;
-  width: 28%;
-  border-color: rgb(60, 80, 0);
+  position: relative;
+  width: 100%;
+  background-color: rgb(0, 30, 0);
+  align-items: center;
+  height: 80%;
+  justify-content: flex-start;
+  border-color: rgb(160, 255, 0);
   border-width: 1px;
   border-style: groove;
+  border-radius: 5px;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  height: 100%;
+  width: 28%;
+  border-right: rgb(60, 80, 0);
+  border-right-width: 1px;
+  border-right-style: groove;
+  margin-left: 0.5%;
+  
+}
+
 .form-row {
   width: 100%;
+  margin-top: 3%;
 }
 .form div label {
-  flex-direction: column;
   display: flex;
+  flex-direction: column;
   align-items: flex-start;
   margin-left: 2%;
   margin: 2%;
@@ -121,29 +142,22 @@
   height: 30px;
   margin-top: 2%;
   font-size: 16px;
+  border-radius: 4.5px;
+  border-width: 1.4px;
+  
 }
 
 .select {
   width: 90%;
   margin-top: 2%;
 }
-.panel {
-  display: flex;
-  position: relative;
-  width: 100%;
-  background-color: rgb(0, 30, 0);
-  align-items: center;
-  height: 100%;
-  justify-content: flex-start;
-  border-color: rgb(60, 60, 0);
-  border-width: 1px;
-  border-style: groove;
-}
+
 .chart-container {
   width: 70%;
   height: 90%;
   align-items: center;
   justify-content: center;
+  margin-left: 1%;
 }
 
 @media screen and (max-width: 1100px) {
@@ -173,7 +187,7 @@
   .fa-solid.fa-xmark {
     display: flex;
     color: azure;
-    font-size: xx-large;
+    font-size: 40px;
     justify-content: flex-end;
     flex-direction: row;
     width: 100%;
@@ -185,7 +199,6 @@
     height: 8%;
   }
   .title {
-    color: yellow;
     height: 100%;
     align-items: center;
     justify-content: center;
@@ -219,13 +232,20 @@
   .form {
     align-items: center;
     justify-content: center;
-
     flex-direction: row;
     height: 40%;
     width: 100%;
     display: inline-grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: minmax(10px, 45%);
+    
+    
+    border-right-width: 0px;
+    border-top-color: rgb(60, 80, 0);
+    border-top-width: 1px;
+    border-top-style: groove;
+    margin-left: 0.5%;
+    
   }
 
   .form span {
@@ -238,5 +258,14 @@
     height: 70%;
     margin-bottom: 0%;
     align-items: center;
+    z-index: 0;
   }
 }
+@media screen and (max-width: 400px) {
+  .form{
+    grid-template-columns: 1fr  1fr;
+    grid-auto-rows: minmax(10px, 45%);
+    
+  }
+}
+
